--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^6.1.2",
+    "@hookform/resolvers": "^2.5.2",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons/": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -10,16 +14,35 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-input-mask": "^3.0.0",
+    "@types/react-text-mask": "^5.4.7",
+    "@types/yup": "^0.29.11",
+    "autoprefixer": "^9",
+    "cep-promise": "^4.1.0",
+    "postcss": "^7",
+    "rc-steps": "^4.1.3",
     "react": "^17.0.2",
+    "react-accessible-accordion": "^3.3.4",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.8.4",
+    "react-input-mask": "^2.0.4",
     "react-scripts": "4.0.3",
+    "react-text-mask": "^5.4.3",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.9"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.2.5",
+    "postcss": "^8.2.15",
+    "postcss-cli": "^8.3.1",
+    "tailwindcss": "^2.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
